syntax = "proto3";

import "PacketBase.proto";

option csharp_namespace = "ChatTest";


message S_ReqEnterRoom {
    PacketType PType = 1;
    string UserName = 2;
    uint32 RoomNo = 3;
}

message S_LeaveRoom {
    PacketType PType = 1;
}

message S_Chat {
    PacketType PType = 1;
    uint32 UserId = 2;
    string msg = 3;
}